typescript/checker/tests/conformance/types/literal/stringLiteralsWithSwitchStatements01.ts.stderr
error: AssignFailed {
    span: Span {
        lo: BytePos(
            97,
        ),
        hi: BytePos(
            102,
        ),
        ctxt: #0,
    },
    left: Lit(
        TsLitType {
            span: Span {
                lo: BytePos(
                    97,
                ),
                hi: BytePos(
                    102,
                ),
                ctxt: #0,
            },
            lit: Str(
                Str {
                    span: Span {
                        lo: BytePos(
                            97,
                        ),
                        hi: BytePos(
                            102,
                        ),
                        ctxt: #0,
                    },
                    value: Atom('bar' type=inline),
                    has_escape: false,
                },
            ),
        },
    ),
    right: Lit(
        TsLitType {
            span: Span {
                lo: BytePos(
                    49,
                ),
                hi: BytePos(
                    50,
                ),
                ctxt: #0,
            },
            lit: Str(
                Str {
                    span: Span {
                        lo: BytePos(
                            7,
                        ),
                        hi: BytePos(
                            12,
                        ),
                        ctxt: #0,
                    },
                    value: Atom('foo' type=inline),
                    has_escape: false,
                },
            ),
        },
    ),
    cause: [],
}
 --> $DIR/tests/conformance/types/literal/stringLiteralsWithSwitchStatements01.ts:7:10
  |
7 |     case "bar":
  |          ^^^^^

